# branch-detective

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
src/branch_detective/: __main__.py  commits.py  compare.py  description.py  repository.py
tests/: __init__.py  test_commit.py  test_compare.py
