[build-system]
requires = ["setuptools>40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "typo_id: the example scenario number"
]

[tool.coverage.run]
source = [
    "branch_detective",
]

[tool.coverage.paths]
source = [
    "src/branch_detective",
    "**/site-packages/branch_detective"
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39

[testenv]
deps = pytest
commands = pytest
"""
