[metadata]
name = branch-detective
version = 1.1.0
description = Detect which commits are absent between branches.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE
author = Jason C. McDonald
author_email = codemouse92@outlook.com
url = https://github.com/codemouse92/branch-detective
project_urls =
    Bug Reports = https://github.com/codemouse92/branch-detective/issues
    Source = https://github.com/codemouse92/branch-detective
keywords = utility git tool development

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    click
    GitPython
python_version = >=3.7, <4

[options.packages.find]
where = src
exclude = tests

[options.extras_require]
test =
    pytest
    coverage
    tox

[options.entry_points]
console_scripts =
    branch-detective = branch_detective.__main__:main

[flake8]
max-line-length = 120
